--- a/work-style.css
+++ b/work-style.css
@@ -1,7 +1,7 @@
 body {
 	min-width: 1000px;
 	background: #282828;
-	background: linear-gradient(-45deg, royalblue, steelblue, snow);
+	background: linear-gradient(-45deg, steelblue, lightsteelblue, snow);
 	background-size: 400% 400%;
 	animation: Gradient 20s ease infinite;
 }
@@ -18,32 +18,42 @@ body {
 	}
 }
 
-.work {
+.proj-with-text {
+	float: left;
 	text-align: center;
-	width: 100%;
+	margin: 1%;
+	width: 23%;
+}
+
+.proj-with-text p {
+	color: black;
+}
+
+.work {
+	min-height: 90%;
 }
 
 .work img {
 	transition: 1s ease;
-	margin: 1%;
 	width: 250px;
 	height: 250px;
 }
 .work img:hover {
-	-webkit-transform: scale(0.8);
-	-ms-transform: scale(0.8);
-	transform: scale(0.8);
+	-webkit-transform: scale(0.9);
+	-ms-transform: scale(0.9);
+	transform: scale(0.9);
 	transition: 1s ease;
 }
 
-footer p {
+footer {
 	text-align: left;
 	color: black;
 	padding-left: 20px;
-	margin: 60px auto;
 }
 
 .wrapper {
 	width: 100%;
 	margin: 0 auto;
+	height: 100%;
+	min-height: 100%;
 } 
