format layout edits

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .body {
-	min-width: 1000px;
+	min-width: 1280px;
 	background: #282828;
 	background: linear-gradient(-45deg, steelblue, lightsteelblue, snow);
 	background-size: 400% 400%;
@@ -82,7 +82,7 @@
 }
 
 .info-row {
-	min-height: 97%;
+	min-height: 95vh;
 }
 
 footer {
