--- a/work-style.css
+++ b/work-style.css
@@ -1,5 +1,5 @@
 body {
-	min-width: 1000px;
+	min-width: 1280px;
 	background: #282828;
 	background: linear-gradient(-45deg, steelblue, lightsteelblue, snow);
 	background-size: 400% 400%;
@@ -30,7 +30,7 @@ body {
 }
 
 .work {
-	min-height: 90%;
+	min-height: 87vh;
 }
 
 .work img {
