--- a/projects-style.css
+++ b/projects-style.css
@@ -1,5 +1,5 @@
 body {
-	min-width: 1280px;
+	/*min-width: 1280px;*/
 	background: #282828;
 	background: linear-gradient(-45deg, steelblue, lightsteelblue, snow);
 	background-size: 400% 400%;
@@ -18,10 +18,14 @@ body {
 	}
 }
 
+.img-center {
+	margin:0 auto;
+}
+
 .proj-with-text {
-	float: left;
+	/*float: left;*/
 	text-align: center;
-	margin: 1%;
+	margin: 0%;
 	width: 23%;
 }
 
