layout changes and font changes

--- a/project-style.css
+++ b/project-style.css
@@ -1,5 +1,5 @@
 body {
-	min-width: 1280px;
+	/*min-width: 1280px;*/
 	background: #282828;
 	background: linear-gradient(-45deg, steelblue, lightsteelblue, snow);
 	background-size: 400% 400%;
@@ -40,6 +40,7 @@ body {
 	padding-top: 5%;
 	color: black;
 	padding-bottom: 5%;
+	font-size: 15px;
 }
 
 .project-text a {
