added responsive layout

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 .body {
-	/*min-width: 1200px;*/
 	background: #282828;
 	background: linear-gradient(-45deg, steelblue, lightsteelblue, snow);
 	background-size: 400% 400%;
@@ -23,11 +22,19 @@
 	width:210px;
 	height:310px;
 }
+nav {
+	float: center;
+}
 
 .nav-bar li {
-	float: right;
 	margin: 30px;
 	text-align: center;
+}
+
+@media screen and (min-width: 600px) {
+  nav {
+	float: right;
+	}
 }
 
 .nav-link{
@@ -96,6 +103,12 @@ footer {
 	color: black;
 	padding-left: 20px;
 }
+
+/*@media only screen and (max-width: 375px) {
+  p {
+    font-size: 100px;
+  }
+}*/
 
 /* Smartphones (portrait and landscape) ----------- */
 /*@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
