--- a/work-style.css
+++ b/work-style.css
@@ -18,34 +18,72 @@ body {
 	}
 }
 
-.img-center {
-	margin:0 auto;
+.projects-list {
+	padding-right: 20%;
+    padding-left: 20%;
+    padding-top: 20%;
+    margin-right: auto;
+    margin-left: auto;
 }
 
-.proj-with-text {
-	float: left;
-	text-align: center;
-	padding-top: 20px;
+.project-row {
+	padding-top: 3%;
+	padding-bottom: 3%;
+	display: flex;
+	flex-wrap: wrap;
+	margin-right: -15px;
+    margin-left: -15px;
 }
 
-.proj-with-text p {
+.preview {
+	display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.preview-title {
+    font-size: 2.281rem;
+    font-weight: 700;
+    color: black;
+}
+
+.preview-tech {
+	margin-bottom: 1.2vw;
+    color: grey;
+    font-size: 1.7rem;
+}
+
+.preview-summary {
 	color: black;
 }
 
-.work {
-	min-height: 87vh;
+.row:hover img-center {
+  transform: scale(1.1, 1.1);
 }
 
-.work img {
+.proj-img {
+	max-width: 100%;
+    height: auto;
+/*	margin:0 auto;
+	transition: 1s ease;
+	max-width: 150%;
+    height: auto;*/
+}
+
+.proj img {
 	transition: 1s ease;
 	width: 250px;
 	height: 250px;
 }
-.work img:hover {
-	-webkit-transform: scale(0.9);
-	-ms-transform: scale(0.9);
-	transform: scale(0.9);
+a:hover .proj img {
+	-webkit-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	transform: scale(1.1);
 	transition: 1s ease;
+}
+
+a:hover .preview-title {
+	color: white;
 }
 
 footer {
