--- a/work-style.css
+++ b/work-style.css
@@ -4,6 +4,7 @@ body {
 	background: linear-gradient(-45deg, steelblue, lightsteelblue, snow);
 	background-size: 400% 400%;
 	animation: Gradient 20s ease infinite;
+	font-family: Bookman, URW Bookman L, serif; 
 }
 
 @-webkit-keyframes Gradient {
@@ -21,7 +22,7 @@ body {
 .projects-list {
 	padding-right: 20%;
     padding-left: 20%;
-    padding-top: 20%;
+    padding-top: 15%;
     margin-right: auto;
     margin-left: auto;
 }
@@ -35,7 +36,15 @@ body {
     margin-left: -15px;
 }
 
+.project-page-title {
+	font-family: Bookman, URW Bookman L, serif;
+	font-size: 120%; 
+}
+
 .preview {
+	font-family: Bookman, URW Bookman L, serif; 
+	font-size: 120%;
+	margin-left: 5%;
 	display: flex;
     flex-direction: column;
     justify-content: center;
@@ -62,7 +71,7 @@ body {
 }
 
 .proj-img {
-	max-width: 100%;
+	max-width: 115%;
     height: auto;
 /*	margin:0 auto;
 	transition: 1s ease;
@@ -72,7 +81,7 @@ body {
 
 .proj img {
 	transition: 1s ease;
-	width: 250px;
+	width: 350px;
 	height: 250px;
 }
 a:hover .proj img {
