--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 	background-size: 400% 400%;
 	animation: Gradient 20s ease infinite;
 	min-height: 100%;
+	font-family: Bookman, URW Bookman L, serif; 
 }
 
 @-webkit-keyframes Gradient {
@@ -29,6 +30,7 @@ nav {
 .nav-bar li {
 	margin: 30px;
 	text-align: center;
+	/*width: auto;*/
 }
 
 @media screen and (min-width: 600px) {
@@ -62,12 +64,14 @@ nav {
 	width: 100%;
 	text-align: center;
 	padding: 0;
-	margin: 0;
+	margin: 0 0;
+	font-family: Bookman, URW Bookman L, serif; 
+	font-size: 120%;
 }
 
 .info-text {
 	color: #000;
-	font-size: 15px;
+	font-size: 110%;
 }
 
 .info-text a{
